BUG FIX: IE incorect shows the page if user doesn't provide job id. Then the cross breaks the layout.

--- a/comaWebServer/src/main/webapp/assets/styles.css
+++ b/comaWebServer/src/main/webapp/assets/styles.css
@@ -232,7 +232,7 @@ table.LeftMenuClientTable a, pageLink
 
 table.LeftMenuClientTable input
 {
-    width: 145;
+    width: 140;
 }
 
 table.editParams input
